--- a/Frontend/FE-1/Session 5/index.html
+++ b/Frontend/FE-1/Session 5/index.html
@@ -1,1 +1,116 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Static Template</title>
+    <style>
+      * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+      }
+      /* h1 { */
+      /* border-width: 10px; */
+      /* border-color: blue; */
+      /* border-style: solid; */
 
+      /* width - style - color */
+      /* border: 100px solid red; */
+
+      /* padding-top: 10px;
+        padding-right: 10px;
+        padding-bottom: 10px;
+        padding-left: 10px; */
+
+      /* top - right - bottom - left */
+      /* padding: 20px 10px 5px 40px; */
+
+      /* top&bottom left&right */
+      /* padding: 20px 10px; */
+
+      /* padding: 20px 10px;
+        margin: 20px;
+      } */
+      /* h2 { */
+      /* border: 10px solid blue; */
+      /* padding: 20px;
+
+        margin-top: 20px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+        margin-left: 20px;
+
+        margin: 30px; */
+      /* } */
+
+      h1 {
+        /* width & height only apply on content
+        padding and border are added on top of that */
+        /* box-sizing: content-box; */
+        /* width & height until the border */
+        /* box-sizing: border-box; */
+        width: 400px;
+        height: 400px;
+        border: 20px solid red;
+        padding: 5px;
+        margin: 5px;
+      }
+      p {
+        border: 5px solid green;
+        /* padding: 5px;
+        margin: 5px; */
+      }
+      /* h3 {
+        font-size: 40px;
+        width: 400px;
+        height: 400px;
+        padding: 10px;
+        margin: 10px;
+      } */
+      /* rem : relative to font-size of root for everything */
+      /* p {
+        font-size: 2rem;
+        width: 20rem;
+        height: 20rem;
+        padding: 2rem;
+        margin: 2rem;
+      } */
+      /* em */
+      /* font-size: relative to closest parent */
+      /* width, height, padding, margin : relative to its own font size */
+      /* p {
+        font-size: 2em;
+        width: 20em;
+        height: 20em;
+        padding: 2em;
+        margin: 2em;
+      } */
+      /* %age */
+      /* font-size: parent's fontsize */
+      /* padding & margin : relative to parent's width */
+      /* width : relative to parent's width */
+      /* height: relative to parents height */
+      /* p {
+        font-size: 200%;
+        padding: 10%;
+        margin: 10%;
+        width: 50%;
+        height: 100%;
+      } */
+      /* vw and vh */
+      p {
+        width: 50vw;
+        height: 50vh;
+      }
+    </style>
+  </head>
+  <body
+    style="font-size: 10px; border: 5px solid red; width: 500px; height: 400px;"
+  >
+    <p>
+      Pastry pie powder
+    </p>
+  </body>
+</html>
