--- a/Frontend/FE-1/Session 7/Spiral Grid Exercise/index.html
+++ b/Frontend/FE-1/Session 7/Spiral Grid Exercise/index.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Static Template</title>
+    <style>
+      main {
+        display: grid;
 
+        grid-template-columns: 100px 100px 100px;
+        grid-template-rows: 200px 200px 200px;
+      }
+
+      #item-1 {
+        background-color: cyan;
+      }
+      #item-2 {
+        background-color: rgb(133, 230, 103);
+      }
+      #item-3 {
+        background-color: rgb(238, 137, 137);
+      }
+      #item-4 {
+        background-color: rgb(109, 144, 241);
+      }
+      #item-5 {
+        background-color: rgb(245, 212, 150);
+      }
+      #item-6 {
+        background-color: rgb(247, 126, 210);
+      }
+    </style>
+  </head>
+  <body>
+    <main>
+      <div itemid="item-1">1</div>
+      <div itemid="item-2">2</div>
+      <div itemid="item-3">3</div>
+      <div itemid="item-4">4</div>
+      <div itemid="item-5">5</div>
+      <div itemid="item-6">6</div>
+    </main>
+  </body>
+</html>
