--- a/Frontend/FE-1/Session 2 /Activity 2 : Relative Links/Session_2/index.html
+++ b/Frontend/FE-1/Session 2 /Activity 2 : Relative Links/Session_2/index.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Static Template</title>
+  </head>
+  <body>
+    <h1>Session 2</h1>
+    <h3>Learn about anchor tags , attributes and relative links</h3>
+    <a href="../index.html"><h4>Go to Home Page</h4></a>
+  </body>
+</html>
