--- a/Frontend/FE-1/Session 3/Activity 2 : Element, Class and Id Selectors/index.html
+++ b/Frontend/FE-1/Session 3/Activity 2 : Element, Class and Id Selectors/index.html
@@ -1,1 +1,23 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Selectors</title>
+  </head>
+  <body>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, saepe
+      asperiores suscipit molestias earum vitae vel voluptates nisi iste ex
+      distinctio! Dolor nulla perspiciatis rerum, magni cumque ducimus earum at.
+    </p>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, saepe
+      asperiores suscipit molestias earum vitae vel voluptates nisi iste ex
+      distinctio! Dolor nulla perspiciatis rerum, magni cumque ducimus earum at.
+    </p>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, saepe
+      asperiores suscipit molestias earum vitae vel voluptates nisi iste ex
+      distinctio! Dolor nulla perspiciatis rerum, magni cumque ducimus earum at.
+    </p>
+  </body>
+</html>
