--- a/Frontend/FE-1/Session 3/Activity 2 : Element, Class and Id Selectors/index.html
+++ b/Frontend/FE-1/Session 3/Activity 2 : Element, Class and Id Selectors/index.html
@@ -2,19 +2,32 @@
 <html>
   <head>
     <title>Selectors</title>
+    <style>
+      body {
+        background-color: orange;
+      }
+
+      #first {
+        color: green;
+      }
+
+      #second {
+        background-color: white;
+      }
+    </style>
   </head>
   <body>
-    <p>
+    <p id="first">
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, saepe
       asperiores suscipit molestias earum vitae vel voluptates nisi iste ex
       distinctio! Dolor nulla perspiciatis rerum, magni cumque ducimus earum at.
     </p>
-    <p>
+    <p id="second">
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, saepe
       asperiores suscipit molestias earum vitae vel voluptates nisi iste ex
       distinctio! Dolor nulla perspiciatis rerum, magni cumque ducimus earum at.
     </p>
-    <p>
+    <p id="first">
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, saepe
       asperiores suscipit molestias earum vitae vel voluptates nisi iste ex
       distinctio! Dolor nulla perspiciatis rerum, magni cumque ducimus earum at.
