--- a/Frontend/FE-1/Session 3/Activity 2 : Element, Class and Id Selectors/index.html
+++ b/Frontend/FE-1/Session 3/Activity 2 : Element, Class and Id Selectors/index.html
@@ -2,19 +2,7 @@
 <html>
   <head>
     <title>Selectors</title>
-    <style>
-      body {
-        background-color: orange;
-      }
-
-      #first {
-        color: green;
-      }
-
-      #second {
-        background-color: white;
-      }
-    </style>
+    <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
     <p id="first">
