--- a/Frontend/FE-1/Session 4/Activity 1 : RGB/index.html
+++ b/Frontend/FE-1/Session 4/Activity 1 : RGB/index.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
+    <style>
+      .parent_div {
+        height: 256px;
+        background-color: rgb(255, 52, 33);
+      }
+      .child_div {
+        height: 128px;
+        background-color: rgb(255, 255, 255, 0.3);
+      }
+    </style>
+  </head>
+  <body>
+    <div class="parent_div">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur
+      asperiores deleniti nisi tempora placeat quo quia aliquid consequatur
+      laborum nostrum, dignissimos dicta temporibus sequi suscipit et aperiam!
 
+      <div class="child_div">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur
+        asperiores deleniti nisi tempora placeat quo quia aliquid consequatur
+        laborum nostrum, dignissimos dicta temporibus sequi suscipit et aperiam!
+      </div>
+    </div>
+  </body>
+</html>
