--- a/Frontend/FE-1/Session 8/Game of boxes Level-1/index.html
+++ b/Frontend/FE-1/Session 8/Game of boxes Level-1/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+<!--     Adding the css style files -->
     <link rel="stylesheet" href="default.styles.css" />
     <link rel="stylesheet" href="styles.css" />
   </head>
